--- a/styles/main.css
+++ b/styles/main.css
@@ -36,10 +36,10 @@
 
 body {
     font-family: 'Grandstander';
+    display: grid;
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    min-height: 100dvh;
+    grid-template-rows: auto 1fr auto;
 }
 
 .container {
